examples/type_system/failing/64_hm_inferred_call_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/64_hm_inferred_call_mismatch.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 1st argument to `f`.
//
//   examples/type_system/failing/64_hm_inferred_call_mismatch.flx:33:20
//    |
// 33 |     let b: Int = f("x")
//    |                    ^^^
//    |                    --- this argument has type `String`
//
// Note:
//   expected argument type: Int
//   found argument type: String
//   the actual argument type is inferred from this expression
//
// Help:
//   Pass a `Int` value as the 1st argument.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn id(x) {
    x
}

fn main() {
    let f = id
    let a: Int = f(1)
    let b: Int = f("x")
    print(to_string(a + b))
}
